feat: update domains

--- a/3c.html
+++ b/3c.html
@@ -65,7 +65,7 @@
 							<h1>3C - Career Counselling Cell</h1>
 							<!--span class="image left"><img src="images/3c.png" alt="" /></span-->
 							<p>3C - Career Counselling Cell is undergoing a makeover. Stay tuned!</p>
-							<p>Until then just drop us an Email on <a href="mailto:StudyBotOfficial@gmail.com">StudyBotOfficial@gmail.com</a> along with your Contact Details. Our mentors will personally contact you.</p>
+							<p>Until then just drop us an Email on <a href="mailto:hey@shyvum.in">hey@shyvum.in</a> along with your Contact Details. Our mentors will personally contact you.</p>
 							<p>Thanks!</p>
 							</div>
 					</div>
@@ -93,14 +93,14 @@
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-									<li><a href="https://linkedin.com/in/shivamgoyal1899" class="icon style2 fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://github.com/ShivamGoyal1899" class="icon style2 fa-github" target="_blank"><span class="label">GitHub</span></a></li>
-									<li><a href="https://twitter.com/ShivamGoyal1899" class="icon style2 fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
-									<li><a href="https://instagram.com/shivam.dev" class="icon style2 fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+									<li><a href="https://linkedin.com/in/shyvum" class="icon style2 fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/shyvum" class="icon style2 fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+									<li><a href="https://twitter.com/shyvum" class="icon style2 fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+									<li><a href="https://instagram.com/shyvum" class="icon style2 fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>Hand crafted with <span style="color: #f7403a">&hearts;</span> in India by <a href="https://goyalshivam.com" target="_blank">Shivam Goyal</a></li>
+								<li>Hand crafted with <span style="color: #f7403a">&hearts;</span> in India by <a href="https://shyvum.in" target="_blank">Shivam Goyal</a></li>
 							</ul>
 						</div>
 					</footer>
