--- a/terms.html
+++ b/terms.html
@@ -64,7 +64,7 @@
 						<div class="inner">
 							<h1>Terms of Service</h1>
 								<p align="justify">These terms and conditions outline the rules and regulations for the use of StudyBot's Website.</p>
-								<p align="justify"> StudyBot is a virtual company located in India founded by <a href="https://goyalshivam.com" target="_blank">Shivam Goyal</a>.</p>
+								<p align="justify"> StudyBot is a virtual company located in India founded by <a href="https://shyvum.in" target="_blank">Shivam Goyal</a>.</p>
 								<p align="justify">By accessing this website we assume you accept these terms and conditions in full. Do not continue to use StudyBot's website 
 								if you do not accept all of the terms and conditions stated on this page.</p>
 								<p align="justify">The following terminology applies to these Terms and Conditions, Privacy Statement and Disclaimer Notice
@@ -86,12 +86,12 @@
 								affiliate / advertising partners may also use cookies.</p><h2>License</h2>
 								<p align="justify">Unless otherwise stated, StudyBot and/or it’s licensors own the intellectual property rights for
 								all material on StudyBot. All intellectual property rights are reserved. You may view and/or print
-								pages from https://studybot.goyalshivam.com for your own personal use subject to restrictions set in these terms and conditions.</p>
+								pages from https://studybot.shyvum.in for your own personal use subject to restrictions set in these terms and conditions.</p>
 								<p align="justify">You must not:</p>
 								<ol align="justify">
-									<li>Republish material from https://studybot.goyalshivam.com</li>
-									<li>Sell, rent or sub-license material from https://studybot.goyalshivam.com</li>
-									<li>Reproduce, duplicate or copy material from https://studybot.goyalshivam.com</li>
+									<li>Republish material from https://studybot.shyvum.in</li>
+									<li>Sell, rent or sub-license material from https://studybot.shyvum.in</li>
+									<li>Reproduce, duplicate or copy material from https://studybot.shyvum.in</li>
 								</ol>
 								<p align="justify">Redistribute content from StudyBot (unless content is specifically made for redistribution).</p>
 							<h2>User Comments</h2>
@@ -170,7 +170,7 @@
 								site.</p>
 
 								<p align="justify">If you are among the organizations listed in paragraph 2 above and are interested in linking to our website,
-								you must notify us by sending an e-mail to <a href="mailto:StudyBotOfficial@gmail.com" title="send an email to StudyBotOfficial@gmail.com">StudyBotOfficial@gmail.com</a>.
+								you must notify us by sending an e-mail to <a href="mailto:hey@shyvum.in" title="send an email to hey@shyvum.in">hey@shyvum.in</a>.
 								Please include your name, your organization name, contact information (such as a phone number and/or e-mail
 								address) as well as the URL of your site, a list of any URLs from which you intend to link to our Web site,
 								and a list of the URL(s) on our site to which you would like to link. Allow 2-3 weeks for a response.</p>
@@ -246,14 +246,14 @@
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-									<li><a href="https://linkedin.com/in/shivamgoyal1899" class="icon style2 fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://github.com/ShivamGoyal1899" class="icon style2 fa-github" target="_blank"><span class="label">GitHub</span></a></li>
-									<li><a href="https://twitter.com/ShivamGoyal1899" class="icon style2 fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
-									<li><a href="https://instagram.com/shivam.dev" class="icon style2 fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+									<li><a href="https://linkedin.com/in/shyvum" class="icon style2 fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/shyvum" class="icon style2 fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+									<li><a href="https://twitter.com/shyvum" class="icon style2 fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+									<li><a href="https://instagram.com/shyvum" class="icon style2 fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>Hand crafted with <span style="color: #f7403a">&hearts;</span> in India by <a href="https://goyalshivam.com" target="_blank">Shivam Goyal</a></li>
+								<li>Hand crafted with <span style="color: #f7403a">&hearts;</span> in India by <a href="https://shyvum.in" target="_blank">Shivam Goyal</a></li>
 							</ul>
 						</div>
 					</footer>
